# MyRAG

./: .env.example  .gitignore  README.md  README_zh.md  main.py  pyproject.toml
src/graphrag/: config.py
src/graphrag/data/: directory.py  loader.py
src/graphrag/data/loaders/: base.py  pdf_loader.py  text_loader.py  web_loader.py
src/graphrag/db/: neo4j_manager.py  vector_store.py
src/graphrag/generation/: generator.py  tool_predictor.py
src/graphrag/graph/: builder.py
src/graphrag/models/: factory.py
src/graphrag/retrieval/: base.py  graph_retriever.py  hybrid.py  router.py  vector_retriever.py
src/graphrag/splitters/: markdown.py
src/graphrag/tools/: weather_tool.py  web_fetcher.py
src/graphrag/utils/: state.py
